--- a/main.html
+++ b/main.html
@@ -6,6 +6,47 @@
 </head>
 <body>
     <!--    Write your code here -->
+	<caption style="white-space: nowrap;">List of all transactions</caption>
+	<table class="table">
+	
+		<thead class="table-dark">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">From</th>
+      <th scope="col">To</th>
+      <th scope="col">Amount($)</th>
+    </tr>
+  </thead>
+		<tbody class="table-group-divider">
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td >Larry the Bird</td>
+		<td>Thornton</td>
+      <td>@twitter</td>
+    </tr>
+			
+  </tbody>
+		<tfoot id="total">
+  <tr>
+    <td colspan="3" class="font-monospace text-end fw-bold">Total 4000</td>
+  </tr>
+</tfoot>
+
+		
+</table>
+	</table>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./script.js"></script>
 </body>
