--- a/main.html
+++ b/main.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <!--    Write your code here -->
-	<caption style="white-space: nowrap;">List of all transactions</caption>
-	<table class="table">
 	
+	<table class="table table-hover table-responsive">
+	<caption style="white-space: nowrap; vertical-align: top;">List of all transactions</caption>
 		<thead class="table-dark">
     <tr>
       <th scope="col">#</th>
@@ -38,11 +38,12 @@
     </tr>
 			
   </tbody>
-		<tfoot id="total">
-  <tr>
+	<tfoot id="total" class="table table-light" >
+  <tr >
     <td colspan="3" class="font-monospace text-end fw-bold">Total 4000</td>
   </tr>
 </tfoot>
+
 
 		
 </table>
