--- a/main.html
+++ b/main.html
@@ -38,9 +38,9 @@
     </tr>
 			
   </tbody>
-	<tfoot id="total" class="table table-light" >
+	<tfoot id="total" class="table table-light"colspan="4" >
   <tr >
-    <td colspan="3" class="font-monospace text-end fw-bold">Total 4000</td>
+    <td colspan="4" class="font-monospace text-end fw-bold">Total 4000</td>
   </tr>
 </tfoot>
 
